# theater-scraper

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: config.py  db.py  db_init.py  main.py  models.py
src/api/: db.py  stages.py  theaters.py
src/routers/: performances.py  stages.py  theaters.py
src/scrapers/: fomenki.py  manager.py  scraper.py
src/services/: performance_service.py  service.py  stage_service.py  theater_service.py
tests/scrapers/: conftest.py  save_sample_html.py  test_fomenki.py
tests/scrapers/fixtures/: fomenki_sample.html
