[project]
name = "theater-scraper"
version = "0.1.0"
description = "Parses theater websites on schedule and serves data via API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.115.12",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.3.5",
    "trio>=0.30.0",
]
dev = [
    "ipykernel>=6.29.5",
]
